Fixed dog grid on smaller sizes

--- a/src/app/filter-bar/filter-bar.component.css
+++ b/src/app/filter-bar/filter-bar.component.css
@@ -1,5 +1,5 @@
 #filterCard {
-    max-width: 300px;
+    max-width: min-content;
     max-height: 90vh;
 }
 #breedContainer {
